--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ const namaBulan=['JANUARI','FEBRUARI','MARET','APRIL','MEI','JUNI','JULI','AGUST
 const namaAnggotaAwal=['SISA KAS SEBELUMNYA','RIZAL','ROMI','TRI','ANIS','FAJAR DJAKA','FAJAR SHANUM','AGUS','LUKMAN','IRAWAN','RIAN','MULYADIE','HELDI','HILMAN','NANO','TEGUH'];
 
 function masukWeb() {
-    let kunci = prompt("UNTUK MELIHAT LAPORAN KAS, SILAHKAN MASUKKAN NOMOR BLOK RUMAH ANDA:");
+    let kunci = prompt("SILAHKAN MASUKKAN NOMOR BLOK RUMAH ANDA:");
     if (!kunci) return;
     
     // Pembersihan cerdas: buang kata BLOK, NO, titik, spasi, dash
@@ -722,5 +722,6 @@ updateUI(); updateDeadlineBanner();
 </script>
 </body>
 </html>
+
 
 
