--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ function masukWeb() {
         if (foundKey) bersih = foundKey;
     }
     
-    if (daftarKunci[bersih]) { prosesMasuk(daftarKunci[bersih], bersih); } else { alert("NOMOR BLOK TIDAK TERDAFTAR! PASTIKAN NOMOR BLOK ANDA BENAR"); }
+    if (daftarKunci[bersih]) { prosesMasuk(daftarKunci[bersih], bersih); } else { alert("NOMOR BLOK TIDAK TERDAFTAR! Pastikan nomor yg anda masukan sudah benar"); }
 }
 
 function prosesMasuk(namaUser, kode) {
@@ -727,3 +727,4 @@ updateUI(); updateDeadlineBanner();
 </script>
 </body>
 </html>
+
