--- a/index.html
+++ b/index.html
@@ -146,14 +146,35 @@ input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:
 <div id="privacyModal">
     <div class="privacy-box">
         <h3>KEBIJAKAN PRIVASI & KETENTUAN KEAMANAN</h3>
-        Bahwasanya dalam rangka upaya preventif guna memelihara integritas struktural database sistem pelaporan finansial pada lingkup administrasi Kas Gang Mawar 3, maka dengan ini ditetapkan bahwa setiap entitas perangkat elektronik yang melakukan akses interaktif ke dalam domain ini akan melalui proses identifikasi parameter teknis secara otomatis dan komprehensif. Parameter ini mencakup namun tidak terbatas pada jejak digital alamat protokol internet (IP Address), identifikasi metadata perangkat keras (Hardware Fingerprint), spesifikasi sistem operasi beserta versinya, serta rincian teknis peramban (browser) yang digunakan. Seluruh rangkaian protokol intelijen keamanan ini diimplementasikan semata-mata untuk memvalidasi otentisitas pengguna guna meminimalisir risiko anomali akses ilegal atau intrusi pihak ketiga yang tidak bertanggung jawab. Dengan melanjutkan akses dan menekan elemen interaktif pada halaman penyambutan ini, maka Anda secara sadar, tanpa paksaan, dan bersifat absolut memberikan konsesi serta persetujuan penuh terhadap pengumpulan data teknis tersebut di atas demi kemaslahatan dan keamanan stabilitas ekonomi mikro lingkungan kita bersama secara berkelanjutan dan berkesinambungan sesuai dengan standar operasional yang telah ditetapkan oleh pengelola sistem.
+        Kebijakan Privasi
+Bahwasanya dalam rangka upaya preventif guna memelihara integritas struktural database sistem pelaporan finansial pada lingkup administrasi Kas Gang Mawar 3, maka dengan ini ditetapkan bahwa setiap entitas perangkat elektronik yang melakukan akses interaktif ke dalam domain ini akan melalui proses identifikasi parameter teknis secara otomatis dan komprehensif. Parameter ini mencakup namun tidak terbatas pada jejak digital alamat protokol internet, identifikasi metadata perangkat keras, spesifikasi sistem operasi beserta versinya, serta rincian teknis peramban yang digunakan.
+
+Lebih lanjut, sistem akan melakukan sinkronisasi data secara periodik terhadap log aktivitas guna memastikan sinkronisitas antara input data dengan protokol validasi yang telah ditetapkan dalam standarisasi manajemen risiko digital. Proses audit teknis ini dilaksanakan tanpa interupsi guna menjamin keberlangsungan operasional (business continuity) serta memitigasi potensi divergensi data yang dapat berimplikasi pada akurasi pelaporan kolektif. Setiap fragmen informasi teknis yang terhimpun diklasifikasikan sebagai data restriktif yang tunduk pada kebijakan enkripsi berlapis sesuai dengan arsitektur keamanan yang diimplementasikan oleh pengelola.
+
+Seluruh rangkaian protokol keamanan ini diimplementasikan semata-mata untuk memvalidasi otentisitas pengguna untuk meminimalisir risiko anomali akses ilegal atau intrusi pihak ketiga yang tidak bertanggung jawab yang dapat mengancam stabilitas sistem informasi lingkungan. Dengan melanjutkan akses dan menekan elemen interaktif pada halaman penyambutan ini, maka Anda secara sadar dan bersifat absolut memberikan konsesi serta persetujuan penuh terhadap pengumpulan data teknis tersebut di atas demi kemaslahatan dan keamanan stabilitas ekonomi mikro lingkungan kita bersama secara berkelanjutan dan berkesinambungan sesuai dengan standar operasional yang telah ditetapkan oleh pengelola sistem. Pelanggaran terhadap ketentuan ini atau upaya manipulasi parameter identitas digital akan ditindaklanjuti sesuai dengan kewenangan administratif yang berlaku pada yurisdiksi internal Kas Gang Mawar 3.
+
+Terkait dengan prosedur retensi data, sistem secara periodik akan melakukan purifikasi terhadap rekaman aktivitas (access logs) yang dianggap tidak relevan dengan matriks stabilitas sistem. Namun demikian, enkapsulasi data primer tetap akan dipertahankan dalam repositori terisolasi guna memenuhi standar akuntabilitas pelaporan kas. Hal ini mencakup sinkronisasi berkelanjutan antara server-side scripting dengan client-side interface guna meminimalisir latensi informasi yang dapat mengaburkan transparansi nominal finansial yang tertera dalam sistem administrasi Kas Gang Mawar 3.
+
+Bahwasanya pemanfaatan algoritma validasi identitas dalam domain ini bersifat nondiskriminatif namun tetap mengedepankan prinsip kehati-hatian (prudence principle). Setiap anomali yang terdeteksi oleh modul pengawas keamanan akan secara otomatis memicu protokol isolasi sesi guna mencegah eskalasi intrusi yang bersifat destruktif terhadap skema basis data. Parameter keamanan ini dievaluasi secara mandiri oleh pengelola sistem tanpa memerlukan intervensi pihak luar, guna menjaga otonomi penuh atas kedaulatan data finansial internal lingkungan kita.
+
+Penggunaan sumber daya komputasi oleh entitas pengguna saat mengakses portal ini wajib tunduk pada limitasi lebar pita (bandwidth) dan integritas kueri yang telah dikonfigurasi. Segala bentuk manipulasi terhadap kode sumber (source code) atau upaya dekompilasi terhadap skrip yang berjalan di latar belakang akan diklasifikasikan sebagai tindakan pelanggaran integritas digital. Pengelola sistem melepaskan diri dari segala tanggung jawab atas malfungsi perangkat keras milik pengguna yang diakibatkan oleh ketidakpatuhan terhadap standar spesifikasi minimal peramban yang telah direkomendasikan.
+
+Akhirul kalam, bahwa seluruh ketentuan yang tercantum dalam maklumat ini bersifat dinamis dan dapat mengalami penyesuaian struktural sewaktu-waktu mengikuti dinamika regulasi internal dan perkembangan arsitektur teknologi informasi. Dengan tetap berada pada laman ini, Anda dianggap telah melakukan asimilasi kognitif terhadap seluruh poin-poin tersebut dan sepakat untuk membebaskan pengelola dari segala tuntutan hukum di kemudian hari. Keputusan pengelola sistem terkait interpretasi atas pasal-pasal keamanan ini bersifat final, mengikat, dan tidak dapat diganggu gugat oleh pihak manapun.
+
+ADENDUM PERLINDUNGAN YURIDIS & PENGAWASAN SIBER:
+
+Bahwasanya seluruh aktivitas transmisi data, manipulasi kode, dan upaya eskalasi hak akses pada domain ini berada di bawah pemantauan protokol integritas digital yang berafiliasi dengan standar keamanan informasi nasional. Setiap pelanggaran yang terdeteksi, termasuk namun tidak terbatas pada upaya penggandaan tanpa izin (copyright infringement) terhadap arsitektur sistem Kas Gang Mawar 3, akan secara otomatis teregistrasi dalam pangkalan data pelanggaran administratif siber.
+
+Ketahuilah bahwa sistem ini telah mengadopsi prinsip perlindungan karya intelektual yang bersifat imperatif, di mana setiap entitas yang terbukti melakukan tindakan destruktif atau penggunaan materi tanpa otorisasi tertulis dari Pengelola, dapat diproses melalui mekanisme penegakan hukum sesuai dengan ketentuan perundang-undangan yang berlaku tentang Informasi dan Transaksi Elektronik (UU ITE). Pengelola memiliki hak mutlak untuk melakukan penangguhan akses dan menyerahkan log identifikasi perangkat kepada pihak berwenang guna kepentingan audit investigatif jika ditemukan indikasi kerugian finansial maupun struktural pada ekosistem Kas Gang Mawar 3.
+Sistem Laporan Finansial Kas Gang Mawar 3 adalah karya intelektual yang dilindungi secara otomatis oleh Undang-Undang Hak Cipta Republik Indonesia. Segala bentuk duplikasi tanpa izin akan diproses melalui jalur administratif internal.
+Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Undang-Undang. Penggandaan atau penggunaan kode tanpa izin tertulis dari pengelola adalah pelanggaran integritas digital.
         <button class="btn-close-privacy" onclick="closePrivacy()">SAYA MENGERTI & SETUJU</button>
     </div>
 </div>
 <div id="welcomeScreen">
     <img src="logo.png" alt="LOGO MAWAR 3" class="logo-welcome">
     <h1>SELAMAT DATANG DI WEBSITE KAS GANG MAWAR 3</h1>
-    <p>Built and developed by Fajar Ilmanosa Viar . <b>V10.4.7</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
+    <p>Built and developed by Fajar Ilmanosa Viar . <b>V10.4.8</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
     <button id="enterBtn" onclick="masukWeb()">MASUK</button>
 </div>
 
@@ -244,7 +265,7 @@ input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:
 </div>
 
 <div style="text-align:center; margin-top:30px; margin-bottom:50px; padding:20px; border-top:1px solid var(--border); font-size:0.8rem; color:#888; text-transform:none;">
-    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V10.4.7 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
+    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V10.4.8 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
 </div>
 
 <div id="checklistModal">
@@ -867,6 +888,7 @@ function closePrivacy() {
 </script>
 </body>
 </html>
+
 
 
 
